--- a/Signal/translations/ms.lproj/PluralAware.stringsdict
+++ b/Signal/translations/ms.lproj/PluralAware.stringsdict
@@ -1033,6 +1033,20 @@
 			<string>Cerita Tersuai · %1$d Penonton</string>
 		</dict>
 	</dict>
+	<key>RAISED_HANDS_TOAST_MULTIPLE_HANDS_MESSAGE</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%1$#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>ld</string>
+			<key>other</key>
+			<string>%2$@ +%1$ld raised a hand</string>
+		</dict>
+	</dict>
 	<key>REREGISTER_INVALID_PIN_ATTEMPT_COUNT_%d</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
