--- a/Signal/translations/uk.lproj/PluralAware.stringsdict
+++ b/Signal/translations/uk.lproj/PluralAware.stringsdict
@@ -488,13 +488,13 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>Виклик: %2$@, %3$@ і ще %1$d користувач…</string>
+			<string>У користувачів %2$@, %3$@ і ще %1$d лунає дзвінок…</string>
 			<key>few</key>
-			<string>Виклик: %2$@, %3$@ і %1$d інших…</string>
+			<string>У користувачів %2$@, %3$@ і ще %1$d лунає дзвінок…</string>
 			<key>many</key>
-			<string>Виклик: %2$@, %3$@ і %1$d інших…</string>
+			<string>У користувачів %2$@, %3$@ і ще %1$d лунає дзвінок…</string>
 			<key>other</key>
-			<string>Виклик: %2$@, %3$@ і %1$d інших…</string>
+			<string>У користувачів %2$@, %3$@ і ще %1$d лунає дзвінок…</string>
 		</dict>
 	</dict>
 	<key>GROUP_CALL_MANY_OTHERS_HERE</key>
@@ -1288,13 +1288,13 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>Ділитися тільки з · %1$d глядач</string>
+			<string>Обрані глядачі · %1$d глядач</string>
 			<key>few</key>
-			<string>Ділитися тільки з · %1$d глядачі</string>
+			<string>Обрані глядачі · %1$d глядачі</string>
 			<key>many</key>
-			<string>Ділитися тільки з · %1$d глядачів</string>
+			<string>Обрані глядачі · %1$d глядачів</string>
 			<key>other</key>
-			<string>Ділитися тільки з · %1$d глядача</string>
+			<string>Обрані глядачі · %1$d глядача</string>
 		</dict>
 	</dict>
 	<key>NEW_GROUP_MEMBERS_VIEW_TITLE_%d</key>
@@ -1475,6 +1475,26 @@
 			<string>Індивідуальна історія · %1$d глядачів</string>
 			<key>other</key>
 			<string>Індивідуальна історія · %1$d глядача</string>
+		</dict>
+	</dict>
+	<key>RAISED_HANDS_TOAST_MULTIPLE_HANDS_MESSAGE</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%1$#@text@</string>
+		<key>text</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>ld</string>
+			<key>one</key>
+			<string>%2$@ +%1$ld raised a hand</string>
+			<key>few</key>
+			<string>%2$@ +%1$ld raised a hand</string>
+			<key>many</key>
+			<string>%2$@ +%1$ld raised a hand</string>
+			<key>other</key>
+			<string>%2$@ +%1$ld raised a hand</string>
 		</dict>
 	</dict>
 	<key>REREGISTER_INVALID_PIN_ATTEMPT_COUNT_%d</key>
