--- a/Signal/translations/he.lproj/PluralAware.stringsdict
+++ b/Signal/translations/he.lproj/PluralAware.stringsdict
@@ -1488,13 +1488,13 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>ld</string>
 			<key>one</key>
-			<string>%2$@ +%1$ld raised a hand</string>
+			<string>%2$@ +%1$ld הרמתם יד</string>
 			<key>two</key>
-			<string>%2$@ +%1$ld raised a hand</string>
+			<string>%2$@ +%1$ld הרמתם יד</string>
 			<key>many</key>
-			<string>%2$@ +%1$ld raised a hand</string>
+			<string>%2$@ +%1$ld הרמתם יד</string>
 			<key>other</key>
-			<string>%2$@ +%1$ld raised a hand</string>
+			<string>%2$@ +%1$ld הרמתם יד</string>
 		</dict>
 	</dict>
 	<key>REREGISTER_INVALID_PIN_ATTEMPT_COUNT_%d</key>
