--- a/Signal/translations/hi.lproj/PluralAware.stringsdict
+++ b/Signal/translations/hi.lproj/PluralAware.stringsdict
@@ -1192,9 +1192,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>ld</string>
 			<key>one</key>
-			<string>%2$@ +%1$ld raised a hand</string>
+			<string>%2$@ +%1$ld ने हाथ उठाया</string>
 			<key>other</key>
-			<string>%2$@ +%1$ld raised a hand</string>
+			<string>%2$@ + %1$ld ने हाथ उठाया है</string>
 		</dict>
 	</dict>
 	<key>REREGISTER_INVALID_PIN_ATTEMPT_COUNT_%d</key>
