--- a/Signal/translations/hr.lproj/PluralAware.stringsdict
+++ b/Signal/translations/hr.lproj/PluralAware.stringsdict
@@ -1488,13 +1488,13 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>ld</string>
 			<key>one</key>
-			<string>%2$@ +%1$ld raised a hand</string>
+			<string>%2$@ i %1$ld podižu ruku</string>
 			<key>few</key>
-			<string>%2$@ +%1$ld raised a hand</string>
+			<string>%2$@ i još %1$ld korisnika podižu ruku</string>
 			<key>many</key>
-			<string>%2$@ +%1$ld raised a hand</string>
+			<string>%2$@ i još %1$ld korisnika podižu ruku</string>
 			<key>other</key>
-			<string>%2$@ +%1$ld raised a hand</string>
+			<string>%2$@ i još %1$ld korisnika podižu ruku</string>
 		</dict>
 	</dict>
 	<key>REREGISTER_INVALID_PIN_ATTEMPT_COUNT_%d</key>
