--- a/Signal/translations/ja.lproj/PluralAware.stringsdict
+++ b/Signal/translations/ja.lproj/PluralAware.stringsdict
@@ -1044,7 +1044,7 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>ld</string>
 			<key>other</key>
-			<string>%2$@ +%1$ld raised a hand</string>
+			<string>%2$@と%1$ldが手を挙げています</string>
 		</dict>
 	</dict>
 	<key>REREGISTER_INVALID_PIN_ATTEMPT_COUNT_%d</key>
