--- a/Signal/translations/pl.lproj/PluralAware.stringsdict
+++ b/Signal/translations/pl.lproj/PluralAware.stringsdict
@@ -1488,13 +1488,13 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>ld</string>
 			<key>one</key>
-			<string>%2$@ +%1$ld raised a hand</string>
+			<string>%2$@ + %1$ld podnoszą rękę</string>
 			<key>few</key>
-			<string>%2$@ +%1$ld raised a hand</string>
+			<string>%2$@ + %1$ld inne osoby podnoszą rękę</string>
 			<key>many</key>
-			<string>%2$@ +%1$ld raised a hand</string>
+			<string>%2$@ + %1$ld innych osób podnoszą rękę</string>
 			<key>other</key>
-			<string>%2$@ +%1$ld raised a hand</string>
+			<string>%2$@ + %1$ld innej osoby podnoszą rękę</string>
 		</dict>
 	</dict>
 	<key>REREGISTER_INVALID_PIN_ATTEMPT_COUNT_%d</key>
