--- a/fastlane/metadata/es-MX/release_notes.txt
+++ b/fastlane/metadata/es-MX/release_notes.txt
@@ -1,1 +1,1 @@
-• Hemos añadido respuestas táctiles y una vibración suave cuando cambias entre vistas diferentes durante una llamada grupal, pero sigue siendo tu elección si te mantienes en la vista de cuadrícula o regresas a la presentación de tu colega.
+• Hemos añadido respuestas táctiles y una vibración suave cuando cambias de vista durante una llamada grupal, pero sigue siendo tu elección si te mantienes en la vista de cuadrícula o regresas a la presentación de tu colega.
