Update release notes

--- a/fastlane/metadata/de-DE/release_notes.txt
+++ b/fastlane/metadata/de-DE/release_notes.txt
@@ -1,1 +1,1 @@
-• Wir haben haptisches Feedback und eine subtile Vibration hinzugefügt, wenn du während eines Gruppenanrufs zwischen verschiedenen Ansichten wechselst.
+• Your microphone will automatically switch to being muted whenever you join a large group call, so now nobody will hear you say "omg there are so many people in here" unless you unmute first.
