--- a/fastlane/metadata/ar-SA/release_notes.txt
+++ b/fastlane/metadata/ar-SA/release_notes.txt
@@ -1,1 +1,1 @@
-• لقد أضفنا ردود فعل لمسية وستشعر باهتزاز خفيف عند التبديل بين طرق العرض المختلفة أثناء مكالمة جماعية.
+• Your microphone will automatically switch to being muted whenever you join a large group call, so now nobody will hear you say "omg there are so many people in here" unless you unmute first.
