--- a/fastlane/metadata/fi/release_notes.txt
+++ b/fastlane/metadata/fi/release_notes.txt
@@ -1,1 +1,1 @@
-• Lisäsimme haptisen palautteen ja värinäilmoituksen, kun vaihdat eri näkymien välillä ryhmäpuhelun aikana.
+• Your microphone will automatically switch to being muted whenever you join a large group call, so now nobody will hear you say "omg there are so many people in here" unless you unmute first.
