--- a/fastlane/metadata/hi/release_notes.txt
+++ b/fastlane/metadata/hi/release_notes.txt
@@ -1,1 +1,1 @@
-• जब आप ग्रुप कॉल के दौरान विभिन्न दृश्यों के बीच बदलाव करते हैं, तो हमने हैप्टिक फीडबैक और हल्का सा वाइब्रेशन जोड़ा है, लेकिन यह अभी भी आप पर निर्भर करता है कि आप इसे बदलते हैं या नहीं और ग्रिड दृश्य से वापस उस स्लाइड शो पर स्विच करते हैं जिसे आपका सहकर्मी प्रस्तुत कर रहा है।
+• Your microphone will automatically switch to being muted whenever you join a large group call, so now nobody will hear you say "omg there are so many people in here" unless you unmute first.
