--- a/fastlane/metadata/hr/release_notes.txt
+++ b/fastlane/metadata/hr/release_notes.txt
@@ -1,1 +1,1 @@
-• Dodali smo povratnu informaciju putem dodira i laganu vibraciju kao indikator prebacivanja između različitih vrsta prikaza tijekom grupnih poziva.
+• Your microphone will automatically switch to being muted whenever you join a large group call, so now nobody will hear you say "omg there are so many people in here" unless you unmute first.
