--- a/fastlane/metadata/hu/release_notes.txt
+++ b/fastlane/metadata/hu/release_notes.txt
@@ -1,1 +1,1 @@
-• Haptikus visszajelzést és rezgésjelzőt adtunk hozzá, amikor csoportos hívás közben váltogatsz a különböző nézetek között.
+• Your microphone will automatically switch to being muted whenever you join a large group call, so now nobody will hear you say "omg there are so many people in here" unless you unmute first.
