--- a/fastlane/metadata/it/release_notes.txt
+++ b/fastlane/metadata/it/release_notes.txt
@@ -1,1 +1,1 @@
-• Abbiamo aggiunto il feedback aptico e una leggera vibrazione quando cambi modalità di visualizzazione durante una chiamata di gruppo. E tu come preferisci vedere la schermata durante una chiamata? Noi siamo fan della griglia!
+• Your microphone will automatically switch to being muted whenever you join a large group call, so now nobody will hear you say "omg there are so many people in here" unless you unmute first.
