--- a/fastlane/metadata/ms/release_notes.txt
+++ b/fastlane/metadata/ms/release_notes.txt
@@ -1,1 +1,1 @@
-• Kami menambahkan maklum balas haptik dan getaran halus apabila anda menukar antara paparan berbeza semasa panggilan kumpulan.
+• Your microphone will automatically switch to being muted whenever you join a large group call, so now nobody will hear you say "omg there are so many people in here" unless you unmute first.
