--- a/fastlane/metadata/pl/release_notes.txt
+++ b/fastlane/metadata/pl/release_notes.txt
@@ -1,1 +1,1 @@
-• Od teraz podczas przełączania się między różnymi trybami widoku w czasie połączeń grupowych pojawi się sygnał dotykowy w postaci delikatnych wibracji. Czy sprawi to, że chętniej wrócisz z widoku siatki do prezentacji koleżanki z pracy? To już zależy od Ciebie.
+• Your microphone will automatically switch to being muted whenever you join a large group call, so now nobody will hear you say "omg there are so many people in here" unless you unmute first.
