--- a/fastlane/metadata/pt-BR/release_notes.txt
+++ b/fastlane/metadata/pt-BR/release_notes.txt
@@ -1,1 +1,1 @@
-• Adicionamos feedback háptico e uma leve vibração ao alternar entre diferentes visualizações durante uma chamada em grupo. No entanto, a decisão de voltar da visualização em grade para a apresentação de slides que seu colega está exibindo ainda é sua.
+• Your microphone will automatically switch to being muted whenever you join a large group call, so now nobody will hear you say "omg there are so many people in here" unless you unmute first.
