--- a/fastlane/metadata/pt-PT/release_notes.txt
+++ b/fastlane/metadata/pt-PT/release_notes.txt
@@ -1,1 +1,1 @@
-• Adicionámos feedback háptico e uma vibração subtil quando altera entre vistas diferentes durante uma chamada de grupo.
+• Your microphone will automatically switch to being muted whenever you join a large group call, so now nobody will hear you say "omg there are so many people in here" unless you unmute first.
