--- a/fastlane/metadata/ro/release_notes.txt
+++ b/fastlane/metadata/ro/release_notes.txt
@@ -1,1 +1,1 @@
-• Am adăugat feedback haptic și o vibrație subtilă atunci când treci de la o vizualizare la alta în timpul unui apel în grup. Rămâne, însă, la latitudinea ta dacă te agiți sau nu și treci de la vizualizarea grilă înapoi la prezentarea de diapozitive pe care o prezintă colegul tău.
+• Your microphone will automatically switch to being muted whenever you join a large group call, so now nobody will hear you say "omg there are so many people in here" unless you unmute first.
