--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,1 +1,1 @@
-• Мы добавили тактильную обратную связь и едва уловимую вибрацию при переключении между различными видами панели во время группового звонка. Но решать, сбросить ли сетку и переключиться обратно на слайд-шоу, которое демонстрирует ваш коллега, по-прежнему вам.
+• Your microphone will automatically switch to being muted whenever you join a large group call, so now nobody will hear you say "omg there are so many people in here" unless you unmute first.
