--- a/fastlane/metadata/sk/release_notes.txt
+++ b/fastlane/metadata/sk/release_notes.txt
@@ -1,1 +1,1 @@
-• Pridali sme haptickú odozvu a indikátor vibrácií pri prepínaní medzi rôznymi zobrazeniami počas skupinového hovoru.
+• Your microphone will automatically switch to being muted whenever you join a large group call, so now nobody will hear you say "omg there are so many people in here" unless you unmute first.
