--- a/fastlane/metadata/uk/release_notes.txt
+++ b/fastlane/metadata/uk/release_notes.txt
@@ -1,1 +1,1 @@
-• Тепер виклики можна не тільки бачити й чути, а й відчувати! Ми додали тактильний відгук і легку вібрацію під час зміни режиму перегляду в групових викликах.
+• Your microphone will automatically switch to being muted whenever you join a large group call, so now nobody will hear you say "omg there are so many people in here" unless you unmute first.
